[gd_scene load_steps=33 format=2]

[ext_resource path="res://Scenes/Settings Page Scenes/Scripts/main-settings-page.gd" type="Script" id=1]
[ext_resource path="res://Assets/Settings/general-page-box.png" type="Texture" id=2]
[ext_resource path="res://Assets/Register Page/tempBackground.jpg" type="Texture" id=3]
[ext_resource path="res://Scenes/Settings Page Scenes/setting_navbar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Settings Page Scenes/general-settings-navbar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Settings/default_user_profile.png" type="Texture" id=7]
[ext_resource path="res://Assets/Settings/UserProfileBorder.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Settings Page Scenes/upload-photo-overlay.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Settings Page Scenes/Scripts/editProfileBtn.gd" type="Script" id=10]
[ext_resource path="res://Assets/Placeholder Pictures/background.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 36
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 20
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=15]
size = 20
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="DynamicFont" id=21]
size = 20
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=14]
size = 20
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.407843, 0.407843, 0.407843, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.407843, 0.407843, 0.407843, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.768627, 0.768627, 0.768627, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.768627, 0.768627, 0.768627, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=5]
size = 18
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 18
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="DynamicFont" id=12]
size = 18
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=13]
size = 30
use_filter = true
font_data = ExtResource( 6 )

[node name="main-settings-page" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 800, 450 )
scale = Vector2( 1.0582, 0.916497 )
texture = ExtResource( 11 )

[node name="MainSettingPage" type="Node2D" parent="."]
position = Vector2( 800, 468 )
scale = Vector2( 1.33333, 1.5 )

[node name="General-page-box" type="Sprite" parent="MainSettingPage"]
position = Vector2( -3.37488, 5.66669 )
scale = Vector2( 0.750002, 0.666667 )
texture = ExtResource( 2 )

[node name="Profile-page-box" type="Sprite" parent="MainSettingPage/General-page-box"]
position = Vector2( 1, -1 )
texture = ExtResource( 2 )

[node name="UsernameTxt" type="RichTextLabel" parent="MainSettingPage/General-page-box/Profile-page-box"]
margin_left = 84.0
margin_top = -162.0
margin_right = 636.0
margin_bottom = -121.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "User's Name "
fit_content_height = true

[node name="UserInfo1" type="RichTextLabel" parent="MainSettingPage/General-page-box/Profile-page-box"]
margin_left = 164.0
margin_top = -63.0
margin_right = 440.0
margin_bottom = -35.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "Some information about user"

[node name="UserInfo2" type="RichTextLabel" parent="MainSettingPage/General-page-box/Profile-page-box"]
margin_left = 164.0
margin_top = 25.0
margin_right = 440.0
margin_bottom = 53.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "Some information about user"

[node name="UserInfo3" type="RichTextLabel" parent="MainSettingPage/General-page-box/Profile-page-box"]
margin_left = 164.0
margin_top = 115.0
margin_right = 440.0
margin_bottom = 143.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "Some information about user"

[node name="TextureRect" type="TextureRect" parent="MainSettingPage/General-page-box/Profile-page-box"]
margin_left = -146.5
margin_top = -90.4997
margin_right = 53.4998
margin_bottom = 109.5
texture = ExtResource( 7 )
expand = true

[node name="UserProfileBorder" type="Sprite" parent="MainSettingPage/General-page-box/Profile-page-box/TextureRect"]
position = Vector2( 100, 99.9999 )
texture = ExtResource( 8 )

[node name="editProfileBtn" type="Button" parent="MainSettingPage/General-page-box/Profile-page-box/TextureRect"]
margin_left = 64.0
margin_top = 214.0
margin_right = 135.0
margin_bottom = 238.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 20 )
text = "edit"
script = ExtResource( 10 )

[node name="Account-page-box" type="Sprite" parent="MainSettingPage/General-page-box"]
visible = false
position = Vector2( 1, -1 )
texture = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="MainSettingPage/General-page-box/Account-page-box"]
margin_left = -185.0
margin_top = -168.0
margin_right = -36.0
margin_bottom = -122.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Account"

[node name="RichTextLabel2" type="RichTextLabel" parent="MainSettingPage/General-page-box/Account-page-box"]
margin_left = -125.0
margin_top = -89.0
margin_right = -46.0
margin_bottom = -53.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 21 )
text = "Email:"

[node name="EmailLabel" type="RichTextLabel" parent="MainSettingPage/General-page-box/Account-page-box"]
margin_left = -61.0
margin_top = -89.0
margin_right = 179.0
margin_bottom = -53.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 21 )
text = "User's email address"

[node name="RichTextLabel3" type="RichTextLabel" parent="MainSettingPage/General-page-box/Account-page-box"]
margin_left = -125.0
margin_top = -27.0
margin_right = 76.0
margin_bottom = 9.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 21 )
text = "Change Password"

[node name="RichTextLabel4" type="RichTextLabel" parent="MainSettingPage/General-page-box/Account-page-box"]
margin_left = -125.0
margin_top = 34.0
margin_right = 76.0
margin_bottom = 70.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 21 )
text = "Delete Account"

[node name="RichTextLabel5" type="RichTextLabel" parent="MainSettingPage/General-page-box/Account-page-box"]
margin_left = -125.0
margin_top = 97.0
margin_right = 76.0
margin_bottom = 133.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 21 )
text = "Other Functions"

[node name="Tutorials-page-box" type="Sprite" parent="MainSettingPage/General-page-box"]
visible = false
position = Vector2( 0, -1 )
texture = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="MainSettingPage/General-page-box/Tutorials-page-box"]
margin_left = -185.0
margin_top = -168.0
margin_right = -32.0
margin_bottom = -123.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Tutorials"

[node name="TutorialVideoLink" type="RichTextLabel" parent="MainSettingPage/General-page-box/Tutorials-page-box"]
margin_left = -106.0
margin_top = -91.0
margin_right = 144.0
margin_bottom = -63.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 14 )
text = "Tutorial: video link"

[node name="TutorialVideoLink2" type="RichTextLabel" parent="MainSettingPage/General-page-box/Tutorials-page-box"]
margin_left = -106.0
margin_top = -31.0
margin_right = 144.0
margin_bottom = -3.00003
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 14 )
text = "Tutorial: video link"

[node name="TutorialVideoLink3" type="RichTextLabel" parent="MainSettingPage/General-page-box/Tutorials-page-box"]
margin_left = -106.0
margin_top = 29.9999
margin_right = 144.0
margin_bottom = 57.9999
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 14 )
text = "Tutorial: video link"

[node name="TutorialVideoLink4" type="RichTextLabel" parent="MainSettingPage/General-page-box/Tutorials-page-box"]
margin_left = -106.0
margin_top = 90.9999
margin_right = 144.0
margin_bottom = 119.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 14 )
text = "Tutorial: video link"

[node name="GeneralBtnController" parent="MainSettingPage/General-page-box" instance=ExtResource( 5 )]
position = Vector2( -202, -282 )

[node name="Controls-page-box" type="Sprite" parent="MainSettingPage"]
visible = false
position = Vector2( -3.375, 5 )
scale = Vector2( 0.750002, 0.666667 )
texture = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="MainSettingPage/Controls-page-box"]
margin_left = -96.0
margin_top = -232.0
margin_right = 50.0
margin_bottom = -186.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Controls"

[node name="CtrlSensitivitySlider" type="HSlider" parent="MainSettingPage/Controls-page-box"]
margin_left = 124.0
margin_top = -155.0
margin_right = 324.0
margin_bottom = -103.0
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area_highlight = SubResource( 4 )

[node name="RichTextLabel2" type="RichTextLabel" parent="MainSettingPage/Controls-page-box"]
margin_left = -58.0
margin_top = -141.0
margin_right = 90.0
margin_bottom = -115.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
text = "Control Sensitivity"

[node name="CheckButton" type="CheckButton" parent="MainSettingPage/Controls-page-box"]
margin_left = 115.0
margin_top = -72.0
margin_right = 191.0
margin_bottom = -32.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/hover_pressed = SubResource( 11 )

[node name="CheckButton2" type="CheckButton" parent="MainSettingPage/Controls-page-box"]
margin_left = 117.0
margin_top = 4.0
margin_right = 193.0
margin_bottom = 44.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/hover_pressed = SubResource( 11 )

[node name="RichTextLabel3" type="RichTextLabel" parent="MainSettingPage/Controls-page-box"]
margin_left = -55.0
margin_top = 90.0
margin_right = 220.0
margin_bottom = 117.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 12 )
text = "Some more complicated settings"

[node name="RichTextLabel4" type="RichTextLabel" parent="MainSettingPage/Controls-page-box"]
margin_left = -55.0
margin_top = -65.0
margin_right = 69.0
margin_bottom = -39.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
text = "Other Settings"

[node name="RichTextLabel5" type="RichTextLabel" parent="MainSettingPage/Controls-page-box"]
margin_left = -54.0
margin_top = 13.0
margin_right = 66.0
margin_bottom = 39.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
text = "Other Settings"

[node name="Audio-page-box" type="Sprite" parent="MainSettingPage"]
visible = false
position = Vector2( -3.37488, 5 )
scale = Vector2( 0.750002, 0.666667 )
texture = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="MainSettingPage/Audio-page-box"]
margin_left = -96.0
margin_top = -232.0
margin_right = 9.0
margin_bottom = -188.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Audio"

[node name="VolumeSlider" type="HSlider" parent="MainSettingPage/Audio-page-box"]
margin_left = 77.0
margin_top = -155.0
margin_right = 277.0
margin_bottom = -103.0
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area_highlight = SubResource( 4 )

[node name="RichTextLabel2" type="RichTextLabel" parent="MainSettingPage/Audio-page-box"]
margin_left = -58.0
margin_top = -141.0
margin_right = 17.0
margin_bottom = -115.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
text = "Volume"

[node name="CheckButton" type="CheckButton" parent="MainSettingPage/Audio-page-box"]
margin_left = 72.0001
margin_top = -21.0
margin_right = 148.0
margin_bottom = 19.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/hover_pressed = SubResource( 11 )

[node name="CheckButton2" type="CheckButton" parent="MainSettingPage/Audio-page-box"]
margin_left = 75.0001
margin_top = 55.0
margin_right = 151.0
margin_bottom = 95.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/hover_pressed = SubResource( 11 )

[node name="RichTextLabel3" type="RichTextLabel" parent="MainSettingPage/Audio-page-box"]
margin_left = -55.0
margin_top = 141.0
margin_right = 220.0
margin_bottom = 168.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 12 )
text = "Some more complicated settings"

[node name="VolumeSlider2" type="HSlider" parent="MainSettingPage/Audio-page-box"]
margin_left = 79.0
margin_top = -95.0
margin_right = 279.0
margin_bottom = -43.0
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area_highlight = SubResource( 4 )

[node name="RichTextLabel4" type="RichTextLabel" parent="MainSettingPage/Audio-page-box"]
margin_left = -58.0
margin_top = -81.0
margin_right = 17.0
margin_bottom = -55.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
text = "Bass"

[node name="RichTextLabel5" type="RichTextLabel" parent="MainSettingPage/Audio-page-box"]
margin_left = -58.0
margin_top = -14.0
margin_right = 70.0
margin_bottom = 12.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
text = "Other Settings"

[node name="RichTextLabel6" type="RichTextLabel" parent="MainSettingPage/Audio-page-box"]
margin_left = -58.0
margin_top = 62.0
margin_right = 70.0
margin_bottom = 88.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
text = "Other Settings"

[node name="Video-page-box" type="Sprite" parent="MainSettingPage"]
visible = false
position = Vector2( -3.375, 5 )
scale = Vector2( 0.750002, 0.666667 )
texture = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="MainSettingPage/Video-page-box"]
margin_left = -96.0
margin_top = -232.0
margin_right = 5.0
margin_bottom = -178.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Video"

[node name="CamSensitivitySlider" type="HSlider" parent="MainSettingPage/Video-page-box"]
margin_left = 124.0
margin_top = -155.0
margin_right = 324.0
margin_bottom = -103.0
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area_highlight = SubResource( 4 )

[node name="RichTextLabel2" type="RichTextLabel" parent="MainSettingPage/Video-page-box"]
margin_left = -58.0
margin_top = -141.0
margin_right = 104.0
margin_bottom = -115.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
text = "Camera Sensitivity"

[node name="CheckButton" type="CheckButton" parent="MainSettingPage/Video-page-box"]
margin_left = 115.0
margin_top = -72.0
margin_right = 191.0
margin_bottom = -32.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/hover_pressed = SubResource( 11 )

[node name="CheckButton2" type="CheckButton" parent="MainSettingPage/Video-page-box"]
margin_left = 116.0
margin_top = 4.0
margin_right = 192.0
margin_bottom = 44.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/hover_pressed = SubResource( 11 )

[node name="RichTextLabel3" type="RichTextLabel" parent="MainSettingPage/Video-page-box"]
margin_left = -55.0
margin_top = 90.0
margin_right = 220.0
margin_bottom = 117.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 12 )
text = "Some more complicated settings"

[node name="RichTextLabel4" type="RichTextLabel" parent="MainSettingPage/Video-page-box"]
margin_left = -58.0
margin_top = -64.0
margin_right = 104.0
margin_bottom = -38.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
text = "Other Settings"

[node name="RichTextLabel5" type="RichTextLabel" parent="MainSettingPage/Video-page-box"]
margin_left = -58.0
margin_top = 11.9999
margin_right = 104.0
margin_bottom = 37.9999
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
text = "Other Settings"

[node name="Settings-Navbar" parent="MainSettingPage" instance=ExtResource( 4 )]
position = Vector2( -500.626, -208.333 )
scale = Vector2( 0.750002, 0.666667 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 719.0
margin_top = 65.001
margin_right = 834.0
margin_bottom = 105.001
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 13 )
text = "Settings"

[node name="UploadPictureOverlay" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( 804, 465 )
scale = Vector2( 1.55238, 1 )

[node name="TempBackground" type="Sprite" parent="."]
visible = false
position = Vector2( 800, 450 )
scale = Vector2( 1.33333, 1.5 )
texture = ExtResource( 3 )

[connection signal="pressed" from="MainSettingPage/General-page-box/Profile-page-box/TextureRect/editProfileBtn" to="MainSettingPage/General-page-box/Profile-page-box/TextureRect/editProfileBtn" method="_on_editProfileBtn_pressed"]
